--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 h1 {
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 1.875em;
 }
 .characters {
   justify-content: center;
@@ -32,13 +32,15 @@ h1 {
 }
 
 .logo {
-  margin-top: 100px;
+  margin-top: 6.25em;
   display: flex;
+  max-width: 100%;
+  height: auto;
 }
 
 #start {
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 1.25em;
 }
 
 button {
